# WordTrainerApp

./: .gitignore  README.md  build.gradle.kts  local.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: words.json
app/src/main/cpp/: CMakeLists.txt  llama_bridge.cpp
app/src/main/res/color/: nav_item_color.xml
app/src/main/res/drawable/: ic_add.xml  ic_book.xml  ic_bulb.xml  ic_cards.xml  ic_chat.xml  ic_check.xml  ic_dice.xml  ic_filter.xml  ic_language.xml  ic_mic.xml  ic_notification.xml  ic_quiz.xml  ic_send.xml  ic_settings.xml  ic_sort.xml  ic_speak.xml  ic_star.xml  ic_stats.xml  ic_stop.xml  ic_swap.xml  ic_translate.xml  ic_trophy.xml  ic_words.xml
app/src/main/res/layout/: activity_achievements.xml  activity_coach.xml  activity_dictionary.xml  activity_languages.xml  activity_main.xml  activity_settings.xml  activity_word_detail.xml  dialog_add_language.xml  dialog_add_word.xml  dialog_coach_settings.xml  dialog_edit_word.xml  fragment_coach_chat.xml  fragment_coach_lessons.xml  fragment_coach_smart.xml  fragment_flashcards.xml  fragment_quiz.xml  fragment_stats.xml  fragment_wordlist.xml  item_achievement.xml  item_coach_lesson.xml  item_coach_message.xml  item_dictionary.xml  item_language.xml  item_word.xml  view_stat_cell.xml
app/src/main/res/menu/: bottom_nav_menu.xml  coach_menu.xml  main_menu.xml
app/src/main/res/values/: colors.xml  strings.xml  themes-night.xml  themes.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-night/: colors.xml
(+70 files in other folders)
